samples/_failures_safe/1761609603_58f370_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53858027.c: In function ‘main’:
./samples/SAFE/__tmp_53858027.c:135:5: error: expected expression at end of input
  135 |     read_matrix(&a,
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_53858027.c:135:5: error: expected declaration or statement at end of input
